[tool.poetry]
name = "llm-project"
version = "0.1.0"
description = ""
authors = ["Mathias Haugestad <https://github.com/mhaugestad>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
jupyterlab = "^4.0.7"
notebook = "^7.0.5"
lmql = {git = "https://github.com/eth-sri/lmql"}
guidance = "^0.0.64"
openai = "^0.28.1"
transformers = "^4.34.0"
accelerate = "^0.23.0"
outlines = "^0.0.8"
python-dotenv = "^1.0.0"
redis-om = "^0.2.1"
redis = "4.6.0"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
